syntax="proto3";

option csharp_namespace = "WorkshiftProtocol";
import "google/protobuf/timestamp.proto";

service WorkshiftRepository {
	rpc All (Request) returns (WorkshiftList);
	rpc Get (WorkshiftId) returns (WorkshiftInfo);
	rpc Remove(WorkshiftId) returns (StatusResponse);
	rpc Add(WorkshiftInfo) returns (StatusResponse);
	rpc Update(WorkshiftInfo) returns (StatusResponse);
}

message Request {

}

message WorkshiftList {
	repeated WorkshiftInfo workshifts = 1;
}

message WorkshiftInfo {
	int32 id = 1;
	int32 shopId = 2;
	int32 merchid = 3;
	google.protobuf.Timestamp starttime = 4;
	google.protobuf.Timestamp endtime = 5;
}

message WorkshiftId {
	int32 id = 1;
}

message StatusResponse {
	int32 status = 1;
}
